--- a/man/makefile
+++ b/man/makefile
@@ -1,5 +1,5 @@
 # Makes man pages
-# Note: requires http://www.methods.co.nz/asciidoc/
+# Requires http://www.methods.co.nz/asciidoc/
 
 all: $(patsubst %.1.txt,%.1,$(wildcard *.1.txt))
 
